// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="radio-preview">
  <input
    id="radio-preview"
    type="radio"
    value="value"
    aria-describedby="<generated>"
  >
  <label
    data-weight="regular"
    for="radio-preview"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="<generated>"
  >
    Description
  </div>
</ds-field>
`;

exports[`Inline 1`] = `
<style>
  .radio-inline-radio__group {
  display: flex;
  flex-wrap: wrap;
  gap: var(--ds-size-6);
}
</style>
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Kontaktes på e-post?
  </legend>
  <p id="<generated>">
    Bekreft om du ønsker å bli kontaktet per e-post.
  </p>
  <div>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        type="radio"
        value="ja"
        name="my-inline"
        id="<generated>"
      >
      <label
        data-weight="regular"
        for="<generated>"
      >
        Ja
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        type="radio"
        value="nei"
        name="my-inline"
        id="<generated>"
      >
      <label
        data-weight="regular"
        for="<generated>"
      >
        Nei
      </label>
    </ds-field>
  </div>
</fieldset>
`;

exports[`Outline 1`] = `
<ds-field
  data-variant="outline"
  data-clickdelegatefor="radio-preview"
>
  <input
    id="radio-preview"
    type="radio"
    value="value"
    aria-describedby="<generated>"
  >
  <label
    data-weight="regular"
    for="radio-preview"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="<generated>"
  >
    Description
  </div>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="radio-preview">
  <input
    id="radio-preview"
    type="radio"
    value="value"
    aria-describedby="<generated>"
  >
  <label
    data-weight="regular"
    for="radio-preview"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="<generated>"
  >
    Description
  </div>
</ds-field>
`;

exports[`Radio In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <ds-field data-clickdelegatefor="radio-in-color-context">
    <input
      id="radio-in-color-context"
      type="radio"
      checked
      aria-describedby="<generated>"
    >
    <label
      data-weight="regular"
      for="radio-in-color-context"
    >
      Radio
    </label>
    <div
      data-field="description"
      id="<generated>"
    >
      Description
    </div>
  </ds-field>
</div>
`;
